--- a/index.html
+++ b/index.html
@@ -864,8 +864,8 @@
                 <div class="text-center">
                     <h1 class="text-lg font-bold">V S TRADERS (வி எஸ் டிரேடர்ஸ்)</h1>
                     <p class="text-[10px]">Your kangayam, Tiruppur, Tamil Nadu (உங்கள் முகவரி)</p>
-                    <p class="text-[10px]">GSTIN: 33vstraders</p>
-                    <p class="text-[10px]">Ph: 99999 99999 | ${new Date(timestamp).toLocaleDateString()} (${new Date(timestamp).toLocaleTimeString()})</p>
+                    <p class="text-[10px]">GSTIN: VS TRADERS</p>
+                    <p class="text-[10px]">Ph: 9999999999 | ${new Date(timestamp).toLocaleDateString()} (${new Date(timestamp).toLocaleTimeString()})</p>
                     <p class="text-[10px] font-bold">Bill ID: ${saleId}</p>
                 </div>
                 <hr class="border-t border-dashed my-1">
@@ -1208,3 +1208,4 @@
     </script>
 </body>
 </html>
+
